fixed: collapsed tabs would still be shown

--- a/src/pagecontrol.css
+++ b/src/pagecontrol.css
@@ -1,5 +1,11 @@
 tab {
     prototype: Tab url('pagecontrol.js');
+    display: none;
+
+    height: *;
+}
+
+.block {
     display: block;
 }
 
